<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingBottom="50dp"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/addServiceTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addServiceService"
            android:textColorHint="@color/text_color"
            android:inputType="textPersonName"
            android:layout_marginVertical="20dp"
            android:textColor="@color/text_color" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtService"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:ems="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addServiceUser"
            android:textColorHint="@color/text_color"
            android:inputType="textPersonName"
            android:layout_marginVertical="20dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:ems="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/addServicePassword"
            android:inputType="textPassword"
            android:textColorHint="@color/text_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/button_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="15"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddService"
            android:text="@string/addServiceButtonDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/button_color" />

    </LinearLayout>

</RelativeLayout>
